# realtime-agentic-data-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: .env.example  Caddyfile  README.md  bootstrap_host.sh  docker-compose.yml  host_deploy.sh
deploy/observability/: README.md  dashboard.json  http_check.yaml  monitors.json
deploy/tests/: test_deploy_modes.sh
scripts/: check_s3_objects.py  docker_smoke.sh  eval_agent.py  inspect_table.py
src/rtdp/: __init__.py  _io.py  catalog.py  cli.py  config.py  demos.py  dq.py  ingest.py  maintenance.py  query.py  schema.py  stream.py  telemetry.py  transforms.py
src/rtdp/agent/: __init__.py  dq.py  llm.py  loop.py  prompts.py  runtime.py  tools.py
src/rtdp/api/: __init__.py  app.py  models.py  routes.py
src/rtdp/mcp/: __init__.py  server.py
src/rtdp/sources/: __init__.py  base.py  opensky.py  synthetic.py
tests/: conftest.py  test_agent_cli.py  test_agent_dq.py  test_agent_llm.py  test_agent_loop.py  test_agent_tools.py  test_api.py  test_api_localstack.py  test_cli.py  test_config.py  test_demos.py  test_demos_localstack.py  test_dq.py  test_ingest.py  test_ingest_localstack.py  test_localstack_smoke.py  test_maintenance.py  test_mcp_cli.py  test_mcp_server.py  test_opensky.py  test_query.py  test_schema.py  test_stream.py  test_stream_localstack.py  test_telemetry.py  test_transforms.py
