[project]
name = "rtdp"
version = "0.1.0"
description = "Real-time agentic data platform — Apache Iceberg lakehouse (Stage 1), read-only serving layer (Stage 2A), and incremental micro-batch ingestion (Stage 2B)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyiceberg[sql-sqlite,pyarrow,duckdb]>=0.10,<0.13",
    "pydantic-settings>=2.5",
    "pandera>=0.20",
    "pandas>=2.2",
    "pyarrow>=16",
    "duckdb>=1.0",
    "httpx>=0.27",
    "boto3>=1.34",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
rtdp = "rtdp.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rtdp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "localstack: integration tests that require a running LocalStack S3 (deselect with -m 'not localstack')",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
